# cosmoscalibur.github.io

./: .doit.db  .gitignore  .webui_secret_key  404.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  apt.txt  archive.html  codebook.toml  conf.py  environment.yml  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html  index.html  index.rst  justfile  nota_migracion.md  por_migrar.md  pyproject.toml  requirements-dev.txt  requirements.txt  robots.txt  rss.xml  ruff.toml  sitemap.xml  sitemapindex.xml  untranslated.txt
.claude/: settings.local.json
2010/: index.html
2011/: index.html
2012/: index.html
2013/: index.html
2014/: index.html
2017/: index.html
2018/: index.html
2019/: index.html
2020/: index.html
_ext/: ed_sitemap.py  lang_switcher.py  perf_optimizer.py
backup_draft/: PrePrints.md
backup_index/: index_test.html
categories/: adsense.xml  afm.xml  agua.xml  agujero-negro.xml  agujeros-negros.xml  alcohol.xml  alerta-nuclear.xml  amazon.xml  amor.xml  anaconda-python.xml  anaconda.xml  android.xml  animacion.xml  ano-internacional-de-la-quimica.xml  ano-internacional.xml  antigravedad.xml  antimateria.xml  antropologia.xml  appimage.xml  apt.xml  arje.xml  arn.xml  arqueoastronomia.xml  astrobiologia.xml  astrofisica.xml  astronomia.xml  atraccion-gravitacional.xml  audio.xml  audiolibros.xml  autoconversacion.xml  bash.xml  beso.xml  bibliometria.xml  bibliotecas.xml  biografias.xml  bioinformatica.xml  biologia.xml  blockchain.xml  blog.xml  bolsas-plasticas.xml  (+228 more)
cosmoblog/: ARCHITECTURE.md  __init__.py  directives.py  engine.py  feeds.py  transforms.py
docs/: .buildinfo  404.html  (+26 more)
(+5329 files in other folders)
