[project]
name = "cosmoscalibur-github-io"
version = "1.0.0"
description = "Proyecto del blog"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ablog>=0.11.12",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx-design>=0.6.1",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinxcontrib-youtube>=1.4.1",
    "sphinxext-rediraffe>=0.2.7",
    "sphinxext-opengraph>=0.9.1",
    "matplotlib>=3.10.0",
    "myst-parser>=4.0.0",
    "jupyterlab>=4.3.4",
    "jupyterlab-myst>=2.4.2",
    "jupytext>=1.16.6",
    "myst-nb>=1.1.2",
]

[project.optional-dependencies]
sitemap = ["sphinx-sitemap>=2.6.0"]

[dependency-groups]
dev = ["jupyterlab>=4.3.4", "jupyterlab-myst>=2.4.2"]

[tool.pyright]
# https://zed.dev/docs/languages/python#settings
venvPath = "."
venv = ".venv"

[tool.pyrigh.analysis]
# https://microsoft.github.io/pyright/#/settings
disableOrganizeImports = true
diagnosticMode = "openFilesOnly" # "openFilesOnly"/"workspace"
typeCheckingMode = "strict"
